--- a/src/components/Row.css
+++ b/src/components/Row.css
@@ -18,3 +18,29 @@
 @media screen and (max-width: 768px) {
     .row_poster {max-height: 280ox;}
 }
+
+.swiper-pagination {
+    text-align: right !important;
+}
+
+.swiper-pagination-bullet {
+    background: gray !important;
+    opacity: 1 !important;
+}
+
+.swiper-pagination-bullet-active {
+    background-color: white !important;
+}
+
+.swiper-button-prev {
+    color: white !important;
+}
+
+.swiper-button-next {
+    color: white !important;
+}
+
+.swiper-button-next::after, .swiper-button-prev::after {
+    font-size: 1.3rem !important;
+    font-weight: 600 !important;
+}
